--- a/themes/default/pages/home.htm
+++ b/themes/default/pages/home.htm
@@ -15,6 +15,18 @@ is_hidden = 0
         
         {% component 'SlideShow' %}
 
+        <section class="promo box box-dark" style="padding-top: 15px;padding-left: 15px;padding-bottom: 15px;padding-right: 15px;">        
+                <div class="row">
+                    <div class="col-md-9">
+                <h1 class="section-heading">Why College Green</h1>
+                    <p style="margin-bottom: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed bibendum orci eget nulla mattis, quis viverra tellus porta. Donec vitae neque ut velit eleifend commodo. Maecenas turpis odio, placerat eu lorem ut, suscipit commodo augue.  </p>   
+                </div>  
+                <div class="col-md-3">
+                    <a class="btn btn-cta" href="index.html#"><i class="fa fa-play-circle"></i>Apply Now</a>  
+                </div>
+                </div>
+            </section><!--//promo-->
+
         <div class="row cols-wrapper">
 
             {% component 'actualites' %}
