--- a/themes/default/content/majeur_promotion.htm
+++ b/themes/default/content/majeur_promotion.htm
@@ -1,11 +1,11 @@
 <!--//testimonials-->
                 <section class="testimonials">
-                    <h1 class="section-heading text-highlight"><span class="line" style='font-size: 18px;'>Majeur de
+                    <h1 class="section-heading text-highlight" style="border-top: 2px solid #6091ba;"><span class="line" style='font-size: 18px;border: 0;font-size: 22px;font-weight: 300;line-height: 2;color: #2f506c;'>Majeur de
                             promotion</span></h1>
                     <h3 class="section-heading text-highlight" style='margin-bottom: 4px;margin-top: -31px;text-align: center;'>
                         <span class="line" style='font-size: 15px;color: #444444;'>Didja Kobenan .</span>
                     </h3>
                     <a target="_blank" href="img_forest.jpg">
-                        <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width:209px;height: 146px;">
+                        <img src="https://www.w3schools.com/howto/img_forest.jpg" alt="Forest" style="width: 100%;max-height: 170px;">
                     </a>
                 </section>
