--- a/themes/default/content/mot_du_directeur.htm
+++ b/themes/default/content/mot_du_directeur.htm
@@ -1,5 +1,5 @@
-<section class="testimonials" data-click="" style="cursor: pointer;margin-bottom: 15px;">
-                    <h1 class="section-heading text-highlight"><span class="line"> Mot du directeur</span></h1>
+<section class="testimonials" data-click="" style="cursor: pointer;margin-bottom: 28px;margin-top: 28px">
+                    <h1 class="section-heading text-highlight" style="border-top: 2px solid #6091ba;"><span class="line"style="border-top: 0;"> Mot du directeur</span></h1>
                     <!--<div class="carousel-controls">
                           <a class="prev" href="#testimonials-carousel" data-slide="prev"><i class="fas fa-caret-left"></i></a>
                           <a class="next" href="#testimonials-carousel" data-slide="next"><i class="fas fa-caret-right"></i></a>
